fix labels of some images and add some more margins

--- a/src/components/projects/ProjectModal.css
+++ b/src/components/projects/ProjectModal.css
@@ -27,6 +27,7 @@
   .modal-header h2 {
     align-self: center;
     font-family: 'Quicksand', sans-serif;
+    margin-bottom: 5px;
   }
   /* The Close Button */
   .close {
