--- a/src/components/interests/Interests.css
+++ b/src/components/interests/Interests.css
@@ -2,6 +2,8 @@
     justify-content: center;
     top: -250px;
     margin-bottom: 20px;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 .interests .column {
     float: left;
