--- a/src/components/projects/Slideshow.css
+++ b/src/components/projects/Slideshow.css
@@ -18,6 +18,7 @@
 .slides img {
     max-width:100%;
     max-height:100%;
+    image-rendering: -webkit-optimize-contrast;
   }
 
   .prev, .next {
