--- a/src/components/general/label/labelledData.css
+++ b/src/components/general/label/labelledData.css
@@ -1,13 +1,13 @@
 .labelled-data {
-    display: flex;
-    margin: 2px;
+  display: flex;
+  margin: 2px;
 }
 
 .label {
-    color: #E1AAA5;
-    margin-right: 10px;
+  color: #e1aaa5;
+  margin-right: 10px;
 }
 
 .data {
-    color: #585756;
+  color: #585756;
 }
