--- a/src/components/general/link/link.css
+++ b/src/components/general/link/link.css
@@ -1,17 +1,22 @@
 .link-data {
-    display: flex;
-    margin: 2px;
-    align-items: center;
+  display: flex;
+  margin: 2px;
+  align-items: center;
 }
 
 a svg {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 a:hover {
-    color:#FF8B94;
+  color: #ff8b94;
 }
 
 a span:hover {
-    color:#FF8B94;
+  color: #ff8b94;
+}
+
+a {
+  text-decoration: none;
+  color: #e1aaa5;
 }
