--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,29 +1,31 @@
 .navbar {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 80px;
-    position: fixed;
-    top: 0;
-    background: #FFF;
-    border-bottom: 1px solid #f1f1f1;
-    width: 100%;
-    margin:0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 80px;
+  position: fixed;
+  top: 0;
+  background: #fff;
+  border-bottom: 1px solid #f1f1f1;
+  width: 100%;
+  margin: 0;
+  z-index: 2;
 }
 
-.items{
-    list-style-type: none;
-    display: grid;
-    padding-left: 25px;
-    padding-right: 25px;
+.items {
+  list-style-type: none;
+  display: grid;
+  padding-left: 25px;
+  padding-right: 25px;
 }
 
-.items :hover{
-    color:#FF8B94;
+.items :hover {
+  color: #ff8b94;
+  cursor: pointer;
+  font-weight: bolder;
 }
 
-a {
-    text-decoration: none;
-    color: #E1AAA5;
+.active {
+  color: #ff8b94;
+  font-weight: bold;
 }
-/* /*E1AAA5 */
