--- a/src/components/projects/ProjectModal.css
+++ b/src/components/projects/ProjectModal.css
@@ -1,75 +1,82 @@
 .modal {
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    cursor: auto;
-  }
-  
-  .modal-content {
-    background-color: #fefefe;
-    margin: 5% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-  
-  .modal-header{
-    display: flex;
-    justify-content: space-between;
-  }
+  position: fixed; 
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0, 0, 0); 
+  background-color: rgba(0, 0, 0, 0.4);
+  cursor: auto;
+}
 
-  .modal-header h2 {
-    align-self: center;
-    font-family: 'Quicksand', sans-serif;
-    margin-bottom: 5px;
-  }
-  /* The Close Button */
-  .close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    margin-top: -10px;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color:#FF8B94;
-    text-decoration: none;
-    cursor: pointer;
-  }
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; 
+}
 
-  .display-block {
-    display: block;
-  }
-  
-  .display-none {
-    display: none;
-  }
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+}
 
-    
-  .fadein {
-    animation-name: fadein;
-    animation-duration: 0.5s;
+.modal-header h2 {
+  align-self: center;
+  font-family: "Quicksand", sans-serif;
+  margin-bottom: 5px;
+}
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  margin-top: -10px;
+}
+
+.close:hover,
+.close:focus {
+  color: #ff8b94;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.display-block {
+  display: block;
+}
+
+.display-none {
+  display: none;
+}
+
+.fadein {
+  animation-name: fadein;
+  animation-duration: 0.5s;
+}
+
+.fadeout {
+  animation-name: fadeout;
+  animation-duration: 0.5s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
   }
-
-  .fadeout {
-    animation-name: fadeout;
-    animation-duration: 0.5s;
+  to {
+    opacity: 1;
   }
+}
 
-    @keyframes fadein {
-      from {opacity: 0}
-      to {opacity: 1}
-    }
-
-    @keyframes fadeout {
-      from {opacity: 1}
-      to {opacity:0}
-    }
+@keyframes fadeout {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
