--- a/src/components/projects/Slideshow.css
+++ b/src/components/projects/Slideshow.css
@@ -1,13 +1,13 @@
 .dots {
-    text-align:center;
+  text-align: center;
 }
 
 .slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-    margin-bottom: 30px;
-  }
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+  margin-bottom: 30px;
+}
 
 .slides {
   display: none;
@@ -16,67 +16,74 @@
 }
 
 .slides img {
-    max-width:100%;
-    max-height:100%;
-    image-rendering: -webkit-optimize-contrast;
-  }
+  max-width: 100%;
+  max-height: 100%;
+  image-rendering: -webkit-optimize-contrast;
+}
 
-  .prev, .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: #E1AAA5;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: #e1aaa5;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
 
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
 
-  .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-  }
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
 
-  .text {
-    color: #717171;
-    font-size: 15px;
-    position: absolute;
-    bottom: -25px;
-    width: 100%;
-    text-align: center;
-  }
-  
+.text {
+  color: #717171;
+  font-size: 15px;
+  position: absolute;
+  bottom: -25px;
+  width: 100%;
+  text-align: center;
+}
+
 /* The dots/bullets/indicators */
 .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0px 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0px 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dot.active,
+.dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+    opacity: 0.4;
   }
-  
-  .active, .dot:hover {
-    background-color: #717171;
+  to {
+    opacity: 1;
   }
-  
-  /* Fading animation */
-  .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-  
-  @keyframes fade {
-    from {opacity: .4}
-    to {opacity: 1}
-  }
+}
